name:                eta-weekly
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/eta-weekly#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable eta-weekly
  main-is:             eta.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hakyll
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/psibi/eta-weekly
